--- a/app/src/main/res/layout/activity_display2.xml
+++ b/app/src/main/res/layout/activity_display2.xml
@@ -5,13 +5,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Display">
-
+    tools:context=".Display"
+    android:orientation="horizontal">
 
 
     <com.jsibbold.zoomage.ZoomageView
         android:id="@+id/imageView"
-        android:layout_width="370dp"
+        android:layout_width="match_parent"
         android:layout_height="600dp"
         android:layout_gravity="center_horizontal"
         android:src="@drawable/map"
@@ -29,4 +29,27 @@
         app:zoomage_zoomable="true" />
 
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="PREV"
+            android:onClick="prev"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentBottom="true"/>
+
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="NEXT"
+            android:onClick="next"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"/>
+
+    </RelativeLayout>
 </LinearLayout>
