--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,18 +69,27 @@
 
         </RadioGroup>
 
-
-
-
-    <Spinner
-        android:id="@+id/spinner1"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="42dp" />
+        android:layout_height="56dp">
+
+        <Spinner
+            android:id="@+id/spinner1"
+            android:layout_width="368dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+        <Button
+            android:id="@+id/refreshbtn"
+            android:layout_width="67dp"
+            android:layout_height="match_parent"
+            android:background="@android:drawable/ic_menu_rotate" />
+    </LinearLayout>
 
     <Spinner
         android:id="@+id/spinner2"
-        android:layout_width="match_parent"
-        android:layout_height="51dp" />
+        android:layout_width="290dp"
+        android:layout_height="67dp" />
 
     <Button
         android:id="@+id/nav_button"
@@ -90,13 +99,12 @@
         android:text="@string/Navigate" />
 
 
-
     <com.jsibbold.zoomage.ZoomageView
         android:id="@+id/imageView"
         android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:src="@drawable/map"
+        android:layout_height="282dp"
         android:layout_gravity="center_horizontal"
+        android:src="@drawable/map"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
